# SFMLris

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
sources/: Block.cpp  Block.hpp  BlockCreator.cpp  BlockCreator.hpp  BlockPiece.cpp  BlockPiece.hpp  BlockType.hpp  Game.cpp  Game.hpp  NextPieceSection.cpp  NextPieceSection.hpp  SoundEffect.cpp  SoundEffect.hpp  Statistics.cpp  Statistics.hpp  Texture.cpp  Texture.hpp  Well.cpp  Well.hpp
